<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/bg_register"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp" >



    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="10dp"
        android:paddingTop="0dp">


        <EditText
            android:id="@+id/editFullName"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/input_register_bg"
            android:hint="@string/hint_fullname"
            android:padding="10dp"
            android:singleLine="true"
            android:inputType="text"
            android:textColor="@color/bg_screen1"
            android:textColorHint="@color/input_register_hint" />

        <EditText
            android:id="@+id/editEmailAddress"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/input_register_bg"
            android:hint="@string/hint_email"
            android:padding="10dp"
            android:singleLine="true"
            android:inputType="textEmailAddress"
            android:textColor="@color/bg_screen1"
            android:textColorHint="@color/input_register_hint" />

        <EditText
            android:id="@+id/editContactNumber"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/input_register_bg"
            android:hint="@string/hint_contactNumber"
            android:padding="10dp"
            android:singleLine="true"
            android:inputType="number"
            android:textColor="@color/bg_screen1"
            android:textColorHint="@color/input_register_hint" />

        <EditText
            android:id="@+id/editAddress"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/input_register_bg"
            android:hint="@string/hint_address"
            android:padding="10dp"
            android:singleLine="true"
            android:inputType="text"
            android:textColor="@color/bg_screen1"
            android:textColorHint="@color/input_register_hint" />

        <EditText
            android:id="@+id/editPassword"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/input_register_bg"
            android:hint="@string/hint_password"
            android:padding="10dp"
            android:singleLine="true"
            android:inputType="textPassword"
            android:textColor="@color/bg_screen1"
            android:textColorHint="@color/input_register_hint" />

        <EditText
            android:id="@+id/editConfirmPassword"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/input_register_bg"
            android:hint="@string/hint_confirmpassword"
            android:inputType="textPassword"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/bg_screen1"
            android:textColorHint="@color/input_register_hint" />


        <!-- Login Button -->

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="#ea4c88"
            android:text="@string/btn_Register"
            android:textColor="@color/white" />


    </LinearLayout>


</LinearLayout>